<resources>
    <string name="app_name">Suitmedia</string>
    <string name="check">CHECK</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="next">NEXT</string>
    <string name="second_screen">Second Screen</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="welcome">Welcome</string>
    <string name="john_doe">John Doe</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="firstname_lastname">Firstname Lastname</string>
    <string name="email_email_com">EMAIL@EMAIL.COM</string>
    <string name="image_photo">Image Photo</string>
    <string name="third_screen">Third Screen</string>
    <string name="timeout">Timeout</string>
    <string name="refresh">Refresh</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="isPalindrome">isPalindrome</string>
    <string name="notPalindrome">Not Palindrome</string>
    <string name="empty_data">Empty Data</string>
    <string name="ok">OKE</string>
    <string name="result">Result</string>
    <string name="warning">Warning</string>
    <string name="message_warning">Username cannot be empty!</string>
</resources>